# api-functional-testing-http

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  Untitled spreadsheet.xlsx  api-log-test-mcp-dev-plan.md  api_test_suite_sample.numbers  pyproject.toml
.github/workflows/: ci.yml
memory/: README.md  anypoint-integration.md  decisions.md  gotchas.md  status.md
resources/: employee-api-oas.yaml  openapi.yaml  products-eapi1.yaml  products-eapi1_suite.xlsx
resources/test-enroll-impl4/: pom.xml
src/api_log_test_mcp/: __init__.py  config.py  models.py  server.py
tests/: conftest.py  test_anypoint_auth.py  test_anypoint_source.py  test_build_log_source.py  test_create_from_application.py  test_evidence_tabs.py  test_http_runner.py  test_log_source.py  test_mule_app.py  test_orchestrate_logs.py  test_read_test_suite.py  test_response_matcher.py  test_results_writer.py  test_run_suite.py  test_server.py  test_snapshot_validate.py  test_suite_generator.py  test_suite_generator_array.py  test_suite_generator_body.py  test_suite_generator_logurl.py  test_suite_generator_logvalidation.py
worker/: .dev.vars.example  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
worker/scripts/: create-cases.mts  generate-suite.mts  run-and-record.mts  run-schema.mts  run-suite.mts  smoke.mts  sync-secrets.sh
worker/src/: env.ts  file-store.ts  index.ts  job-runner.ts  mcp-server.ts  models.ts  orchestrate.ts  stub-ai.ts
worker/test/: anypoint-auth.test.ts  anypoint-source.test.ts  build-suite.test.ts  (+12 more)
(+33 files in other folders)
