[project]
name = "api-log-test-mcp"
version = "0.1.0"
description = "MCP server for API functional testing with Mule/CloudHub log validation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openpyxl>=3.1.0",
    "jsonschema>=4.0.0",
    "httpx>=0.27.0",
    "numbers-parser>=4.0.0",
]

[project.scripts]
api-log-test-mcp = "api_log_test_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_log_test_mcp"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
